[tool.poetry]
name = "base_coach"
version = "0.1.0"
description = "file checks to determine whether or not something should happen"
authors = ["cw-andrews <cwandrews@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
